# ur5_ROS-Gazebo

./: CMakeLists.txt  OMPL.py  PicknPlace(w).py  README.md  blocks_poses.h  blocks_poses_publisher.cpp  blocks_spawner.cpp  motionplanner1.py  motionplanner3.py  package.xml  testmove2.py  testvisionplanner.py  ur5_gripper.py  ur5_mp.py  ur5_vision.py
launch/: initialize.launch  initialize.world  scara_robot_controller.launch
msg/: Tracker.msg  blocks_poses.msg
old code/: follower_color_filter.py  follower_line_finder.py  motionplanner3.py  testmotion.py  testvisionplanner.py  testvisionplanner_alpha.py  testvisionplanner_beta.py  ur5_mp.py  vision_follower.py
src/: common.gazebo.xacro  motionplanner1.py  motionplanner2.py  move_group_python_interface_tutorial.py  testmotion.py  testvision.py  ur5.urdf.xacro
src/gazebo_test/: model.config
src/orig/: ur5.urdf.xacro
src/ur_description/: common.gazebo.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro
src/ur_description/orig/: common.gazebo.xacro
urdf/: bin.urdf  blue_bin.urdf  blue_box.urdf  blue_cylinder.urdf  conveyor_belt.urdf  readme.txt  red_bin.urdf  red_box.urdf  red_cylinder.urdf  yellow_bin.urdf  yellow_box.urdf  yellow_cylinder.urdf
urdf/sdf/: conveyor_belt.config  conveyor_belt.sdf
